--- a/tests/setname.cmp
+++ b/tests/setname.cmp
@@ -4,14 +4,30 @@
     0: Function: main
     1: LV0: me
     2: @
-    3: "Jeff"
-    4: SETNAME
-    5: EXIT
+    3: NAME
+    4: POP
+    5: LV0: me
+    6: @
+    7: "Jeff"
+    8: SETNAME
+    9: LV0: me
+   10: @
+   11: NAME
+   12: POP
+   13: EXIT
 
 #### Executing Tokens #################################
     0: line 1 ("") Function: main
     1: line 2 ("") LV0: me
     2: line 2 ("", LV0) @
-    3: line 2 ("", #5) "Jeff"
-    4: line 2 ("", #5, "Jeff") SETNAME
-    5: line 3 ("") EXIT
+    3: line 2 ("", #5) NAME
+    4: line 2 ("", "John_Doe") POP
+    5: line 3 ("") LV0: me
+    6: line 3 ("", LV0) @
+    7: line 3 ("", #5) "Jeff"
+    8: line 3 ("", #5, "Jeff") SETNAME
+    9: line 4 ("") LV0: me
+   10: line 4 ("", LV0) @
+   11: line 4 ("", #5) NAME
+   12: line 4 ("", "Jeff") POP
+   13: line 5 ("") EXIT
