--- a/tests/strncmp.cmp
+++ b/tests/strncmp.cmp
@@ -14,7 +14,11 @@
    10: "foOqux"
    11: 3
    12: STRNCMP
-   13: EXIT
+   13: "foObar"
+   14: "fooqux"
+   15: 3
+   16: STRNCMP
+   17: EXIT
 
 #### Executing Tokens #################################
     0: line 1 ("") Function: main
@@ -30,4 +34,8 @@
    10: line 4 ("", 0, 1, "foobar") "foOqux"
    11: line 4 ("", 0, 1, "foobar", "foOqux") 3
    12: line 4 ("", 0, 1, "foobar", "foOqux", 3) STRNCMP
-   13: line 5 ("", 0, 1, 1) EXIT
+   13: line 5 ("", 0, 1, 1) "foObar"
+   14: line 5 ("", 0, 1, 1, "foObar") "fooqux"
+   15: line 5 ("", 0, 1, 1, "foObar", "fooqux") 3
+   16: line 5 ("", 0, 1, 1, "foObar", "fooqux", 3) STRNCMP
+   17: line 6 ("", 0, 1, 1, -1) EXIT
