Refactored debugger.  Fixed string representation.

--- a/tests/array_appenditem.cmp
+++ b/tests/array_appenditem.cmp
@@ -21,6 +21,6 @@
     5: line 2 ("", "d", Mark, "a", "b") "c"
     6: line 2 ("", "d", Mark, "a", "b", "c") }
     7: line 2 ("", "d", "a", "b", "c", 3) ARRAY_MAKE
-    8: line 2 ("", "d", ['a', 'b', 'c']) ARRAY_APPENDITEM
-    9: line 3 ("", ['a', 'b', 'c', 'd']) EXIT
+    8: line 2 ("", "d", 3["a", "b", "c"]) ARRAY_APPENDITEM
+    9: line 3 ("", 4["a", "b", "c", "d"]) EXIT
 Execution completed in 10 steps.
