--- a/tests/array_sort.cmp
+++ b/tests/array_sort.cmp
@@ -57,8 +57,8 @@
    11: line 2 ("", Mark, "d", "h", "G", "B", "j", "E", "a", "i", "F") "c"
    12: line 2 ("", Mark, "d", "h", "G", "B", "j", "E", "a", "i", "F", "c") }
    13: line 2 ("", "d", "h", "G", "B", "j", "E", "a", "i", "F", "c", 10) ARRAY_MAKE
-   14: line 3 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c']) SV0: arr
-   15: line 3 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c'], SV0) !
+   14: line 3 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"]) SV0: arr
+   15: line 3 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], SV0) !
    16: line 4 ("") {
    17: line 5 ("", Mark) 0
    18: line 6 ("", Mark, 0) 1
@@ -68,7 +68,7 @@
    22: line 8 ("", Mark, 0, 1, 2, 1, 2) BITOR
    23: line 9 ("", Mark, 0, 1, 2, 3) }
    24: line 9 ("", 0, 1, 2, 3, 4) ARRAY_MAKE
-   25: line 9 ("", [0, 1, 2, 3]) FOREACH
+   25: line 9 ("", 4[0, 1, 2, 3]) FOREACH
    26: line 9 ("") __FORITER__
    27: line 9 ("", 0, 0, 1) JmpIfFalse: +11
    28: line 9 ("", 0, 0) SV1: mode
@@ -76,10 +76,10 @@
    30: line 9 ("", 0) POP
    31: line 10 ("") SV0: arr
    32: line 10 ("", SV0) @
-   33: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c']) SV1: mode
-   34: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c'], SV1) @
-   35: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c'], 0) ARRAY_SORT
-   36: line 10 ("", ['B', 'E', 'F', 'G', 'a', 'c', 'd', 'h', 'i', 'j']) POP
+   33: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"]) SV1: mode
+   34: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], SV1) @
+   35: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], 0) ARRAY_SORT
+   36: line 10 ("", 10["B", "E", "F", "G", "a", "c", "d", "h", "i", "j"]) POP
    37: line 11 ("") JMP: -11
    26: line 9 ("") __FORITER__
    27: line 9 ("", 1, 1, 1) JmpIfFalse: +11
@@ -88,10 +88,10 @@
    30: line 9 ("", 1) POP
    31: line 10 ("") SV0: arr
    32: line 10 ("", SV0) @
-   33: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c']) SV1: mode
-   34: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c'], SV1) @
-   35: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c'], 1) ARRAY_SORT
-   36: line 10 ("", ['a', 'B', 'c', 'd', 'E', 'F', 'G', 'h', 'i', 'j']) POP
+   33: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"]) SV1: mode
+   34: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], SV1) @
+   35: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], 1) ARRAY_SORT
+   36: line 10 ("", 10["a", "B", "c", "d", "E", "F", "G", "h", "i", "j"]) POP
    37: line 11 ("") JMP: -11
    26: line 9 ("") __FORITER__
    27: line 9 ("", 2, 2, 1) JmpIfFalse: +11
@@ -100,10 +100,10 @@
    30: line 9 ("", 2) POP
    31: line 10 ("") SV0: arr
    32: line 10 ("", SV0) @
-   33: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c']) SV1: mode
-   34: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c'], SV1) @
-   35: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c'], 2) ARRAY_SORT
-   36: line 10 ("", ['j', 'i', 'h', 'd', 'c', 'a', 'G', 'F', 'E', 'B']) POP
+   33: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"]) SV1: mode
+   34: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], SV1) @
+   35: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], 2) ARRAY_SORT
+   36: line 10 ("", 10["j", "i", "h", "d", "c", "a", "G", "F", "E", "B"]) POP
    37: line 11 ("") JMP: -11
    26: line 9 ("") __FORITER__
    27: line 9 ("", 3, 3, 1) JmpIfFalse: +11
@@ -112,10 +112,10 @@
    30: line 9 ("", 3) POP
    31: line 10 ("") SV0: arr
    32: line 10 ("", SV0) @
-   33: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c']) SV1: mode
-   34: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c'], SV1) @
-   35: line 10 ("", ['d', 'h', 'G', 'B', 'j', 'E', 'a', 'i', 'F', 'c'], 3) ARRAY_SORT
-   36: line 10 ("", ['j', 'i', 'h', 'G', 'F', 'E', 'd', 'c', 'B', 'a']) POP
+   33: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"]) SV1: mode
+   34: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], SV1) @
+   35: line 10 ("", 10["d", "h", "G", "B", "j", "E", "a", "i", "F", "c"], 3) ARRAY_SORT
+   36: line 10 ("", 10["j", "i", "h", "G", "F", "E", "d", "c", "B", "a"]) POP
    37: line 11 ("") JMP: -11
    26: line 9 ("") __FORITER__
    27: line 9 ("", 0) JmpIfFalse: +11
