--- a/tests/inf.cmp
+++ b/tests/inf.cmp
@@ -9,6 +9,6 @@
 #### Executing Tokens #################################
     0: line 1 ("") Function: main (0 vars)
     1: line 2 ("") inf.0
-    2: line 2 ("", inf) POP
+    2: line 2 ("", inf.0) POP
     3: line 3 ("") EXIT
 Execution completed in 4 steps.
