--- a/tests/array_count.cmp
+++ b/tests/array_count.cmp
@@ -19,6 +19,6 @@
     4: line 2 ("", Mark, 3, 4) 5
     5: line 2 ("", Mark, 3, 4, 5) }
     6: line 2 ("", 3, 4, 5, 3) ARRAY_MAKE
-    7: line 2 ("", [3, 4, 5]) ARRAY_COUNT
+    7: line 2 ("", 3[3, 4, 5]) ARRAY_COUNT
     8: line 3 ("", 3) EXIT
 Execution completed in 9 steps.
