--- a/tests/array_delitem.cmp
+++ b/tests/array_delitem.cmp
@@ -22,7 +22,7 @@
     5: line 2 ("", Mark, 3, 4, 5) 6
     6: line 2 ("", Mark, 3, 4, 5, 6) }
     7: line 2 ("", 3, 4, 5, 6, 4) ARRAY_MAKE
-    8: line 2 ("", [3, 4, 5, 6]) 2
-    9: line 3 ("", [3, 4, 5, 6], 2) ARRAY_DELITEM
-   10: line 4 ("", [3, 4, 6]) EXIT
+    8: line 2 ("", 4[3, 4, 5, 6]) 2
+    9: line 3 ("", 4[3, 4, 5, 6], 2) ARRAY_DELITEM
+   10: line 4 ("", 3[3, 4, 6]) EXIT
 Execution completed in 11 steps.
