--- a/tests/array_explode.cmp
+++ b/tests/array_explode.cmp
@@ -33,6 +33,6 @@
    11: line 7 ("", "foo", 9, "bar", 8, "baz", 5, "qux", 2, 8) 2
    12: line 7 ("", "foo", 9, "bar", 8, "baz", 5, "qux", 2, 8, 2) /
    13: line 7 ("", "foo", 9, "bar", 8, "baz", 5, "qux", 2, 4) ARRAY_MAKE_DICT
-   14: line 8 ("", {'qux': 2, 'foo': 9, 'baz': 5, 'bar': 8}) ARRAY_EXPLODE
+   14: line 8 ("", 4{"qux": 2, "foo": 9, "baz": 5, "bar": 8}) ARRAY_EXPLODE
    15: line 9 ("", "qux", 2, "foo", 9, "baz", 5, "bar", 8, 4) EXIT
 Execution completed in 16 steps.
