--- a/tests/array_extract.cmp
+++ b/tests/array_extract.cmp
@@ -51,32 +51,32 @@
     7: line 2 ("", Mark, 3, 4, 5, 6, 7) 8
     8: line 2 ("", Mark, 3, 4, 5, 6, 7, 8) }
     9: line 2 ("", 3, 4, 5, 6, 7, 8, 6) ARRAY_MAKE
-   10: line 3 ("", [3, 4, 5, 6, 7, 8]) {
-   11: line 3 ("", [3, 4, 5, 6, 7, 8], Mark) 2
-   12: line 3 ("", [3, 4, 5, 6, 7, 8], Mark, 2) 4
-   13: line 3 ("", [3, 4, 5, 6, 7, 8], Mark, 2, 4) }
-   14: line 3 ("", [3, 4, 5, 6, 7, 8], 2, 4, 2) ARRAY_MAKE
-   15: line 4 ("", [3, 4, 5, 6, 7, 8], [2, 4]) ARRAY_EXTRACT
-   16: line 5 ("", {2: 5, 4: 7}) {
-   17: line 5 ("", {2: 5, 4: 7}, Mark) "a"
-   18: line 5 ("", {2: 5, 4: 7}, Mark, "a") 2
-   19: line 5 ("", {2: 5, 4: 7}, Mark, "a", 2) "b"
-   20: line 5 ("", {2: 5, 4: 7}, Mark, "a", 2, "b") 6
-   21: line 5 ("", {2: 5, 4: 7}, Mark, "a", 2, "b", 6) "c"
-   22: line 5 ("", {2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c") 9
-   23: line 5 ("", {2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c", 9) "d"
-   24: line 5 ("", {2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c", 9, "d") 2
-   25: line 5 ("", {2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c", 9, "d", 2) "e"
-   26: line 5 ("", {2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c", 9, "d", 2, "e") 3
-   27: line 5 ("", {2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c", 9, "d", 2, "e", 3) }
-   28: line 5 ("", {2: 5, 4: 7}, "a", 2, "b", 6, "c", 9, "d", 2, "e", 3, 10) 2
-   29: line 5 ("", {2: 5, 4: 7}, "a", 2, "b", 6, "c", 9, "d", 2, "e", 3, 10, 2) /
-   30: line 5 ("", {2: 5, 4: 7}, "a", 2, "b", 6, "c", 9, "d", 2, "e", 3, 5) ARRAY_MAKE_DICT
-   31: line 6 ("", {2: 5, 4: 7}, {'a': 2, 'c': 9, 'b': 6, 'e': 3, 'd': 2}) {
-   32: line 6 ("", {2: 5, 4: 7}, {'a': 2, 'c': 9, 'b': 6, 'e': 3, 'd': 2}, Mark) "d"
-   33: line 6 ("", {2: 5, 4: 7}, {'a': 2, 'c': 9, 'b': 6, 'e': 3, 'd': 2}, Mark, "d") "b"
-   34: line 6 ("", {2: 5, 4: 7}, {'a': 2, 'c': 9, 'b': 6, 'e': 3, 'd': 2}, Mark, "d", "b") }
-   35: line 6 ("", {2: 5, 4: 7}, {'a': 2, 'c': 9, 'b': 6, 'e': 3, 'd': 2}, "d", "b", 2) ARRAY_MAKE
-   36: line 7 ("", {2: 5, 4: 7}, {'a': 2, 'c': 9, 'b': 6, 'e': 3, 'd': 2}, ['d', 'b']) ARRAY_EXTRACT
-   37: line 8 ("", {2: 5, 4: 7}, {'b': 6, 'd': 2}) EXIT
+   10: line 3 ("", 6[3, 4, 5, 6, 7, 8]) {
+   11: line 3 ("", 6[3, 4, 5, 6, 7, 8], Mark) 2
+   12: line 3 ("", 6[3, 4, 5, 6, 7, 8], Mark, 2) 4
+   13: line 3 ("", 6[3, 4, 5, 6, 7, 8], Mark, 2, 4) }
+   14: line 3 ("", 6[3, 4, 5, 6, 7, 8], 2, 4, 2) ARRAY_MAKE
+   15: line 4 ("", 6[3, 4, 5, 6, 7, 8], 2[2, 4]) ARRAY_EXTRACT
+   16: line 5 ("", 2{2: 5, 4: 7}) {
+   17: line 5 ("", 2{2: 5, 4: 7}, Mark) "a"
+   18: line 5 ("", 2{2: 5, 4: 7}, Mark, "a") 2
+   19: line 5 ("", 2{2: 5, 4: 7}, Mark, "a", 2) "b"
+   20: line 5 ("", 2{2: 5, 4: 7}, Mark, "a", 2, "b") 6
+   21: line 5 ("", 2{2: 5, 4: 7}, Mark, "a", 2, "b", 6) "c"
+   22: line 5 ("", 2{2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c") 9
+   23: line 5 ("", 2{2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c", 9) "d"
+   24: line 5 ("", 2{2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c", 9, "d") 2
+   25: line 5 ("", 2{2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c", 9, "d", 2) "e"
+   26: line 5 ("", 2{2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c", 9, "d", 2, "e") 3
+   27: line 5 ("", 2{2: 5, 4: 7}, Mark, "a", 2, "b", 6, "c", 9, "d", 2, "e", 3) }
+   28: line 5 ("", 2{2: 5, 4: 7}, "a", 2, "b", 6, "c", 9, "d", 2, "e", 3, 10) 2
+   29: line 5 ("", 2{2: 5, 4: 7}, "a", 2, "b", 6, "c", 9, "d", 2, "e", 3, 10, 2) /
+   30: line 5 ("", 2{2: 5, 4: 7}, "a", 2, "b", 6, "c", 9, "d", 2, "e", 3, 5) ARRAY_MAKE_DICT
+   31: line 6 ("", 2{2: 5, 4: 7}, 5{"a": 2, "c": 9, "b": 6, "e": 3, "d": 2}) {
+   32: line 6 ("", 2{2: 5, 4: 7}, 5{"a": 2, "c": 9, "b": 6, "e": 3, "d": 2}, Mark) "d"
+   33: line 6 ("", 2{2: 5, 4: 7}, 5{"a": 2, "c": 9, "b": 6, "e": 3, "d": 2}, Mark, "d") "b"
+   34: line 6 ("", 2{2: 5, 4: 7}, 5{"a": 2, "c": 9, "b": 6, "e": 3, "d": 2}, Mark, "d", "b") }
+   35: line 6 ("", 2{2: 5, 4: 7}, 5{"a": 2, "c": 9, "b": 6, "e": 3, "d": 2}, "d", "b", 2) ARRAY_MAKE
+   36: line 7 ("", 2{2: 5, 4: 7}, 5{"a": 2, "c": 9, "b": 6, "e": 3, "d": 2}, 2["d", "b"]) ARRAY_EXTRACT
+   37: line 8 ("", 2{2: 5, 4: 7}, 2{"b": 6, "d": 2}) EXIT
 Execution completed in 38 steps.
