--- a/tests/array_findval.cmp
+++ b/tests/array_findval.cmp
@@ -26,7 +26,7 @@
     7: line 2 ("", Mark, 3, 4, 5, 6, 7) 8
     8: line 2 ("", Mark, 3, 4, 5, 6, 7, 8) }
     9: line 2 ("", 3, 4, 5, 6, 7, 8, 6) ARRAY_MAKE
-   10: line 3 ("", [3, 4, 5, 6, 7, 8]) 5
-   11: line 3 ("", [3, 4, 5, 6, 7, 8], 5) ARRAY_FINDVAL
-   12: line 4 ("", [2]) EXIT
+   10: line 3 ("", 6[3, 4, 5, 6, 7, 8]) 5
+   11: line 3 ("", 6[3, 4, 5, 6, 7, 8], 5) ARRAY_FINDVAL
+   12: line 4 ("", 1[2]) EXIT
 Execution completed in 13 steps.
