--- a/tests/array_getrange.cmp
+++ b/tests/array_getrange.cmp
@@ -27,8 +27,8 @@
     7: line 2 ("", Mark, 3, 4, 5, 6, 7) 8
     8: line 2 ("", Mark, 3, 4, 5, 6, 7, 8) }
     9: line 2 ("", 3, 4, 5, 6, 7, 8, 6) ARRAY_MAKE
-   10: line 3 ("", [3, 4, 5, 6, 7, 8]) 2
-   11: line 3 ("", [3, 4, 5, 6, 7, 8], 2) 4
-   12: line 3 ("", [3, 4, 5, 6, 7, 8], 2, 4) ARRAY_GETRANGE
-   13: line 4 ("", [5, 6, 7]) EXIT
+   10: line 3 ("", 6[3, 4, 5, 6, 7, 8]) 2
+   11: line 3 ("", 6[3, 4, 5, 6, 7, 8], 2) 4
+   12: line 3 ("", 6[3, 4, 5, 6, 7, 8], 2, 4) ARRAY_GETRANGE
+   13: line 4 ("", 3[5, 6, 7]) EXIT
 Execution completed in 14 steps.
