--- a/tests/array_join.cmp
+++ b/tests/array_join.cmp
@@ -26,7 +26,7 @@
     7: line 2 ("", Mark, 3, 4, 5, 6, 7) 8
     8: line 2 ("", Mark, 3, 4, 5, 6, 7, 8) }
     9: line 2 ("", 3, 4, 5, 6, 7, 8, 6) ARRAY_MAKE
-   10: line 2 ("", [3, 4, 5, 6, 7, 8]) ", "
-   11: line 3 ("", [3, 4, 5, 6, 7, 8], ", ") ARRAY_JOIN
+   10: line 2 ("", 6[3, 4, 5, 6, 7, 8]) ", "
+   11: line 3 ("", 6[3, 4, 5, 6, 7, 8], ", ") ARRAY_JOIN
    12: line 4 ("", "3, 4, 5, 6, 7, 8") EXIT
 Execution completed in 13 steps.
