--- a/tests/array_keys.cmp
+++ b/tests/array_keys.cmp
@@ -29,6 +29,6 @@
     9: line 2 ("", "a", 1, "b", 2, "c", 3, 6) 2
    10: line 2 ("", "a", 1, "b", 2, "c", 3, 6, 2) /
    11: line 2 ("", "a", 1, "b", 2, "c", 3, 3) ARRAY_MAKE_DICT
-   12: line 3 ("", {'a': 1, 'c': 3, 'b': 2}) ARRAY_KEYS
+   12: line 3 ("", 3{"a": 1, "c": 3, "b": 2}) ARRAY_KEYS
    13: line 4 ("", "a", "c", "b", 3) EXIT
 Execution completed in 14 steps.
