--- a/tests/array_make.cmp
+++ b/tests/array_make.cmp
@@ -16,5 +16,5 @@
     3: line 2 ("", "a", "b") "c"
     4: line 2 ("", "a", "b", "c") 3
     5: line 3 ("", "a", "b", "c", 3) ARRAY_MAKE
-    6: line 4 ("", ['a', 'b', 'c']) EXIT
+    6: line 4 ("", 3["a", "b", "c"]) EXIT
 Execution completed in 7 steps.
