--- a/tests/array_reverse.cmp
+++ b/tests/array_reverse.cmp
@@ -25,6 +25,6 @@
     7: line 2 ("", Mark, 3, 4, 5, 6, 7) 8
     8: line 2 ("", Mark, 3, 4, 5, 6, 7, 8) }
     9: line 2 ("", 3, 4, 5, 6, 7, 8, 6) ARRAY_MAKE
-   10: line 3 ("", [3, 4, 5, 6, 7, 8]) ARRAY_REVERSE
-   11: line 4 ("", [8, 7, 6, 5, 4, 3]) EXIT
+   10: line 3 ("", 6[3, 4, 5, 6, 7, 8]) ARRAY_REVERSE
+   11: line 4 ("", 6[8, 7, 6, 5, 4, 3]) EXIT
 Execution completed in 12 steps.
