--- a/tests/array_setitem.cmp
+++ b/tests/array_setitem.cmp
@@ -28,7 +28,7 @@
     8: line 2 ("", 88, Mark, 3, 4, 5, 6, 7) 8
     9: line 2 ("", 88, Mark, 3, 4, 5, 6, 7, 8) }
    10: line 2 ("", 88, 3, 4, 5, 6, 7, 8, 6) ARRAY_MAKE
-   11: line 2 ("", 88, [3, 4, 5, 6, 7, 8]) 2
-   12: line 3 ("", 88, [3, 4, 5, 6, 7, 8], 2) ARRAY_SETITEM
-   13: line 4 ("", [3, 4, 88, 6, 7, 8]) EXIT
+   11: line 2 ("", 88, 6[3, 4, 5, 6, 7, 8]) 2
+   12: line 3 ("", 88, 6[3, 4, 5, 6, 7, 8], 2) ARRAY_SETITEM
+   13: line 4 ("", 6[3, 4, 88, 6, 7, 8]) EXIT
 Execution completed in 14 steps.
