--- a/tests/array_setrange.cmp
+++ b/tests/array_setrange.cmp
@@ -31,12 +31,12 @@
     7: line 2 ("", Mark, 3, 4, 5, 6, 7) 8
     8: line 2 ("", Mark, 3, 4, 5, 6, 7, 8) }
     9: line 2 ("", 3, 4, 5, 6, 7, 8, 6) ARRAY_MAKE
-   10: line 2 ("", [3, 4, 5, 6, 7, 8]) 2
-   11: line 2 ("", [3, 4, 5, 6, 7, 8], 2) {
-   12: line 2 ("", [3, 4, 5, 6, 7, 8], 2, Mark) 88
-   13: line 2 ("", [3, 4, 5, 6, 7, 8], 2, Mark, 88) 99
-   14: line 2 ("", [3, 4, 5, 6, 7, 8], 2, Mark, 88, 99) }
-   15: line 2 ("", [3, 4, 5, 6, 7, 8], 2, 88, 99, 2) ARRAY_MAKE
-   16: line 3 ("", [3, 4, 5, 6, 7, 8], 2, [88, 99]) ARRAY_SETRANGE
-   17: line 4 ("", [3, 4, 88, 99, 7, 8]) EXIT
+   10: line 2 ("", 6[3, 4, 5, 6, 7, 8]) 2
+   11: line 2 ("", 6[3, 4, 5, 6, 7, 8], 2) {
+   12: line 2 ("", 6[3, 4, 5, 6, 7, 8], 2, Mark) 88
+   13: line 2 ("", 6[3, 4, 5, 6, 7, 8], 2, Mark, 88) 99
+   14: line 2 ("", 6[3, 4, 5, 6, 7, 8], 2, Mark, 88, 99) }
+   15: line 2 ("", 6[3, 4, 5, 6, 7, 8], 2, 88, 99, 2) ARRAY_MAKE
+   16: line 3 ("", 6[3, 4, 5, 6, 7, 8], 2, 2[88, 99]) ARRAY_SETRANGE
+   17: line 4 ("", 6[3, 4, 88, 99, 7, 8]) EXIT
 Execution completed in 18 steps.
