--- a/tests/arrayp.cmp
+++ b/tests/arrayp.cmp
@@ -25,6 +25,6 @@
     7: line 2 ("", Mark, 3, 4, 5, 6, 7) 8
     8: line 2 ("", Mark, 3, 4, 5, 6, 7, 8) }
     9: line 2 ("", 3, 4, 5, 6, 7, 8, 6) ARRAY_MAKE
-   10: line 3 ("", [3, 4, 5, 6, 7, 8]) ARRAY?
+   10: line 3 ("", 6[3, 4, 5, 6, 7, 8]) ARRAY?
    11: line 4 ("", 1) EXIT
 Execution completed in 12 steps.
