--- a/tests/contents_array.cmp
+++ b/tests/contents_array.cmp
@@ -14,5 +14,5 @@
     2: line 2 ("", LV0) @
     3: line 2 ("", #5) LOCATION
     4: line 2 ("", #2) CONTENTS_ARRAY
-    5: line 3 ("", [#7, #6, #5]) EXIT
+    5: line 3 ("", 3[#7, #6, #5]) EXIT
 Execution completed in 6 steps.
