--- a/tests/exits_array.cmp
+++ b/tests/exits_array.cmp
@@ -18,9 +18,9 @@
     2: line 2 ("", LV0) @
     3: line 2 ("", #5) LOCATION
     4: line 2 ("", #2) EXITS_ARRAY
-    5: line 2 ("", [#3]) POP
+    5: line 2 ("", 1[#3]) POP
     6: line 3 ("") #0
     7: line 3 ("", #0) EXITS_ARRAY
-    8: line 3 ("", []) POP
+    8: line 3 ("", 0[]) POP
     9: line 4 ("") EXIT
 Execution completed in 10 steps.
