--- a/tests/explode_array.cmp
+++ b/tests/explode_array.cmp
@@ -12,5 +12,5 @@
     1: line 2 ("") "foo bar baz"
     2: line 2 ("", "foo bar baz") " "
     3: line 2 ("", "foo bar baz", " ") EXPLODE_ARRAY
-    4: line 3 ("", ['foo', 'bar', 'baz']) EXIT
+    4: line 3 ("", 3["foo", "bar", "baz"]) EXIT
 Execution completed in 5 steps.
