--- a/tests/getlinks_array.cmp
+++ b/tests/getlinks_array.cmp
@@ -10,5 +10,5 @@
     0: line 1 ("") Function: main (0 vars)
     1: line 2 ("") TRIG
     2: line 2 ("", #3) GETLINKS_ARRAY
-    3: line 3 ("", [#4]) EXIT
+    3: line 3 ("", 1[#4]) EXIT
 Execution completed in 4 steps.
