--- a/tests/setlink.cmp
+++ b/tests/setlink.cmp
@@ -17,6 +17,6 @@
     3: line 2 ("", #3, #0) SETLINK
     4: line 3 ("") TRIG
     5: line 3 ("", #3) GETLINKS_ARRAY
-    6: line 3 ("", [#0]) POP
+    6: line 3 ("", 1[#0]) POP
     7: line 4 ("") EXIT
 Execution completed in 8 steps.
