--- a/tests/textattr.cmp
+++ b/tests/textattr.cmp
@@ -21,14 +21,14 @@
     1: line 2 ("") "Bold"
     2: line 2 ("", "Bold") "bold"
     3: line 2 ("", "Bold", "bold") TEXTATTR
-    4: line 2 ("", "[1mBold[0m") POP
+    4: line 2 ("", "\[[1mBold\[[0m") POP
     5: line 3 ("") "Dim"
     6: line 3 ("", "Dim") "dim"
     7: line 3 ("", "Dim", "dim") TEXTATTR
-    8: line 3 ("", "[2mDim[0m") POP
+    8: line 3 ("", "\[[2mDim\[[0m") POP
     9: line 4 ("") "Foobar"
    10: line 4 ("", "Foobar") "bold,red,bg_green"
    11: line 4 ("", "Foobar", "bold,red,bg_green") TEXTATTR
-   12: line 4 ("", "[1;31;42mFoobar[0m") POP
+   12: line 4 ("", "\[[1;31;42mFoobar\[[0m") POP
    13: line 5 ("") EXIT
 Execution completed in 14 steps.
