--- a/tests/notify_except.cmp
+++ b/tests/notify_except.cmp
@@ -20,6 +20,6 @@
     5: line 2 ("", #2, LV0) @
     6: line 2 ("", #2, #5) "foo"
     7: line 2 ("", #2, #5, "foo") NOTIFY_EXCEPT
-NOTIFY TO ALL IN #2 EXCEPT #5: foo
+NOTIFY TO ALL IN Main Room(#2) EXCEPT John_Doe(#5): foo
     8: line 3 ("") EXIT
 Execution completed in 9 steps.
