--- a/tests/notify.cmp
+++ b/tests/notify.cmp
@@ -14,6 +14,6 @@
     2: line 2 ("", LV0) @
     3: line 2 ("", #5) "foo"
     4: line 2 ("", #5, "foo") NOTIFY
-NOTIFY TO #5: foo
+NOTIFY: foo
     5: line 3 ("") EXIT
 Execution completed in 6 steps.
